deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tugasjefri
  labels:
    app: tugasjefri
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: tugasjefri

---
apiVersion: v1
kind: Service
metadata:
  name: tugasadventer
  labels:
    app: tugasadventer
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: tugasadventer
