deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: tugas.jefri
    http:
      paths:
      - backend:
          serviceName: tugasjefri
          servicePort: 80
  - host: tugas.adventer
    http:
      paths:
      - backend:
          serviceName: tugasadventer
          servicePort: 80
